# git-view

./: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc.json  CLAUDE.md  README.md  git可视化客户端产品功能设计文档.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
.specify/: comment-exemptions.yml  feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
.specify/workflows/: workflow-registry.json
docs/: roadmap.md  user-guide.md
scripts/: check-comment-ratio.sh  check-credential-cleanup.sh  check-no-debug-prints.sh  check-no-token-leak.sh
scripts/perf/: measure.mjs  seed-data.sh
specs/001-gitview-mvp/: acceptance-report.md  perf-baseline.md  plan.md  spec.md  tasks.md
specs/001-gitview-mvp/checklists/: requirements.md
specs/002-fix-settings-clone-diff/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-fix-settings-clone-diff/checklists/: requirements.md
specs/002-fix-settings-clone-diff/contracts/: tauri-commands.md
specs/003-app-auto-update/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-app-auto-update/checklists/: requirements.md
specs/003-app-auto-update/contracts/: updater-flow.md
src/: App.vue  components.d.ts  main.ts
src-tauri/: .rustfmt.toml  Cargo.toml  build.rs  clippy.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: errors.rs  lib.rs  main.rs
src-tauri/src/commands/: accounts.rs  clone_tasks.rs  data_dir.rs  git.rs  local_repositories.rs  logs.rs  mod.rs  remote_repositories.rs  settings.rs
src-tauri/src/db/: migrations.rs  mod.rs  pool.rs
src-tauri/src/db/migrations/: 001_init.sql  002_extend_account_and_gitlab.sql  003_extend_operation_logs.sql  004_add_account_clone_protocol.sql  005_add_clone_task_branch.sql
src-tauri/src/models/: account.rs  clone_task.rs  git.rs  mod.rs  operation_log.rs  repository.rs  settings.rs
src-tauri/src/services/: account_service.rs  clone_task_service.rs  credential_service.rs  data_dir_service.rs  git_cli_service.rs  git_reader_service.rs  gitee_service.rs  github_service.rs  gitlab_service.rs  log_maintenance.rs  log_service.rs  mod.rs  provider.rs  proxy.rs  repository_service.rs  settings_service.rs
src-tauri/src/utils/: data_dir.rs  git_url.rs  mod.rs  path.rs  process.rs  redact.rs  time.rs
src-tauri/tests/: clone_concurrency_test.rs  clone_token_safety_test.rs  git_workflow_test.rs  gitee_service_test.rs  github_service_test.rs  gitlab_service_test.rs  log_redaction_test.rs  repository_scan_test.rs  repository_sync_test.rs  settings_persistence_test.rs
src/api/: account.api.ts  cloneTask.api.ts  error-messages.ts  git.api.ts  localRepository.api.ts  logs.api.ts  remoteRepository.api.ts  settings.api.ts  tauri.ts  update.api.ts
src/components/account/: AccountCard.vue  AccountFormDialog.vue  AccountSwitcher.vue
src/components/clone/: BatchCloneDialog.vue
src/components/git/: BranchSelector.vue  (+5 more)
src/i18n/: en.ts  index.ts  zh.ts
src/layouts/: AppLayout.vue
src/pages/: Accounts.vue  CloneCenter.vue  Dashboard.vue  LocalRepositories.vue  Logs.vue  Onboarding.vue  RemoteRepositories.vue  RepositoryDetail.vue  Settings.vue
src/router/: index.ts
src/stores/: account.ts  app.ts  cloneTask.ts  localRepository.ts  operationLog.ts  remoteRepository.ts  settings.ts
src/types/: account.ts  cloneTask.ts  git.ts  operationLog.ts  repository.ts  settings.ts
(+10 files in other folders)
